--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,213 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+#body{
+    background-color: rgb(67,94,57);
+}
+:root{
+    --text-color:rgb(67,94,57);
+    --border-color:rgb(67,94,57);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+
+navBar{
+    padding: 10px 0;
 }
-a:hover {
-  color: #535bf2;
+nav{
+    overflow: hidden;
+}
+/* when nav menu is close */
+nav .flex-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    padding: 15px;
+    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    z-index: 2;
+}
+/* when nav menu is open */
+nav .nav-on-flex-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    padding: 15px;
+    /* border-radius: 10px; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    z-index: 2;
+}
+nav .logo-container{
+    width: 150px;
+}
+nav .link-container{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    width: 40%;
+}
+nav .link-container .shop{
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+}
+nav .link-container .custom-dropdown{
+    padding: 10px;
+}
+nav .link-container .custom-dropdown .category{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.3rem;
+    position: relative;
+}
+nav .link-container .custom-dropdown .category:hover .hoverLine{
+    width: 100%;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+nav .link-container .link{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.3rem;
+    font-weight: 500;
+    position: relative;
+}
+nav .link-container .link:hover .hoverLine{
+    width: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.hoverLine{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    border: none;
+    border: 1px solid var(--text-color);
+    transition: all .3s;
+}
+nav .user-container{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    color: var(--text-color);
+    gap: 10px;
+    width: 40%;
+    font-size: 1.3rem;
+}
+nav .user-container .total-price{
+    margin-bottom: 0;
+}
+nav .user-container .cart{
+    border: none;
+    background-color: transparent;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+}
+nav .user-container .user{
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--text-color);
+    padding: 10px;
+    border-radius: 50%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+nav .menu-container button{
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+    color: var(--text-color);
+    font-size: 2rem;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* dropdown menu */
+.dropDown-menu-container{
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: white;
+    display: none;
+}
+.dropDown-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 20px 0;
+    font-size: 1.3rem;
+}
+.dropDown-menu .link{
+    text-decoration: none;
+    color: var(--text-color);
+    font-weight: 500;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    margin-bottom: 15px;
+}
+.dropDown-menu .custom-dropdown{
+    padding: 15px;
+    font-size: 1.3rem;
+}
+.dropDown-menu .custom-dropdown .category{
+    text-decoration: none;
+    color: var(--text-color);
+}
+.dropDown-menu .dropdown-user-container{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+.dropDown-menu .dropdown-user-container button{
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+    color: var(--text-color);
+    padding: 0;
+    margin-bottom: 15px;
+}
+.dropDown-menu .dropdown-user-container button p{
+    margin: 0;
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+.dropDown-menu .dropdown-user-container .user{
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+/* hero section */
+.hero{
+    background-image: url('./assets/heroImgs/Hero1.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hero .hero-flex-container .hero-content .content-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: white;
+    color: var(--text-color);
+    padding: 20px;
+}
+.hero .hero-flex-container .hero-content .content-container .hero-button{
+    text-decoration: none;
+    color: var(--text-color);
+    border: 2px solid var(--border-color);
+    padding: 5px 15px;
+    margin-top: 20px;
+    font-weight: 500;
 }
