--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
         --lighGreen:rgb(81, 110, 71);
         --whiteBackground:rgb(232, 236, 239);
         --orange:rgb(204,128,32);
+        --starColor:rgb(255,193,7);
     }
 
     /* Track */
@@ -621,11 +622,25 @@
         .allproducts-best-sell .flex-container{
             display: flex;
             align-items: center;
+            /* flex-wrap: wrap; */
             overflow: hidden;
             gap: 10px;
             padding: 15px 0;
             position: relative;
             width: 100%;
+        }
+        @media(max-width:990px){
+            .allproducts-best-sell .flex-container{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-wrap: wrap;
+                /* overflow: hidden; */
+                gap: 10px;
+                padding: 15px 0;
+                position: relative;
+                width: 100%;
+            }
         }
         .product-containers{
             position: relative;
@@ -728,6 +743,115 @@
             background-color: var(--orange);
         }
 
+/* reviews section */
+        .users-review-head{
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: white;
+        }
+        .reviews-section .users-review-head .stars-container{
+            display: flex;
+        }
+        .reviews-section .main-container{
+            background-color: white;
+            padding: 20px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .reviews-section .main-container .review-pagination{
+            margin-top: 10px;
+            padding: 5px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            width: 100%;
+        }
+        .reviews-section .main-container .review-pagination .review-activePage{
+            background-color: var(--text-color);
+            padding: 5px;
+            border-radius: 50%;
+        }
+        .reviews-section .main-container .pagination-circle-review{
+            border:1px solid var(--text-color);
+            padding: 5px;
+            border-radius: 50%;
+        }
+
+        .reviews-section .main-container .users-reviews-container{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            position: relative;
+            margin-top: 20px;
+        }
+        .reviews-section .main-container .users-reviews-container .button-left{
+            position: absolute;
+            left: 0;
+            display: flex;
+            align-items: center;
+            border: none;
+            padding: 10px;
+            background-color: var(--text-color);
+            color: white;
+            border-radius: 50%;
+            opacity: .7;
+            transition: all .5s;
+            z-index: 2;
+        }
+        .reviews-section .main-container .users-reviews-container .button-right{
+            position: absolute;
+            right: 0;
+            display: flex;
+            align-items: center;
+            border: none;
+            padding: 10px;
+            background-color: var(--text-color);
+            color: white;
+            border-radius: 50%;
+            opacity: .7;
+            transition: all .5s;
+            z-index: 2;
+        }
+                .reviews-section .main-container .users-reviews-container .button-left:hover{
+                    opacity: 1;
+                }
+                .reviews-section .main-container .users-reviews-container .button-right:hover{
+                    opacity: 1;
+                }
+        .reviews-section .main-container .users-reviews-container .reviews{
+            border: 2px solid var(--text-color);
+            padding: 20px;
+            border-radius: 10px;
+            background-color: white;
+            filter: drop-shadow(0 5px 5px rgba(0,0,0,0.3));
+            /* box-shadow: 0 2px 10px 1px rgba(0,0,0,0.3); */
+        }
+        .reviews-section .main-container .users-reviews-container .reviews .date-stars-container{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .reviews-section .main-container .users-reviews-container .reviews .date-stars-container .stars-container{
+            display: flex;
+            align-items: center;
+        }
+        .reviews-section .main-container .users-reviews-container .reviews .date-stars-container .stars-container .star-filled{
+            color: var(--starColor);
+        }
+        .reviews-section .main-container .users-reviews-container .reviews .date-stars-container .stars-container .star{
+            color: gray;
+        }
+        .reviews-section .main-container .users-reviews-container .reviews .message-username-container{
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            align-items: center;
+        }
 
 /* footer section */
         footer{
