--- a/src/index.css
+++ b/src/index.css
@@ -622,6 +622,7 @@
         .allproducts-best-sell .flex-container{
             display: flex;
             align-items: center;
+            justify-content: center;
             /* flex-wrap: wrap; */
             overflow: hidden;
             gap: 10px;
