--- a/src/index.css
+++ b/src/index.css
@@ -254,38 +254,20 @@
     border-radius: 5px;
   }
 
+  .outlet-sections{
+    margin-top: 120px;
+  }
+
         #nav{
             overflow: hidden;
-            background-color: white;
-            margin-bottom: 10px;
-            padding: 10px 0;
-        }
-        #navBar{
             left: 0;
             right: 0;
+            top:0;
             position: fixed;
             padding: 10px 0;
             background-color: white;
-            animation: navbar ease-in-out forwards;
-            transition: all .5s;
+            z-index: 5;
         }
-            @keyframes navbar{
-                0%{
-                    margin:0;
-                    transform: translateY(-115px);
-                    transform: scale(0);
-                }
-                50%{
-                    transform: scale(1);
-                    transform: translateY(-80px);
-                    z-index: 3;
-                }
-                100%{
-                    transform: translateY(0);
-                    transform: scale(1);
-                    z-index: 3;
-                }
-            }
 
     /* when nav menu is close */
         nav .flex-container{
@@ -2060,6 +2042,7 @@
             padding: 10px 10px;
             border-radius: 10px;
             border: none;
+            box-shadow: 0 1px 2px 2px rgba(0,0,0,0.3);
             background-color: rgb(32,29,29);
             color: white;
             outline: none;
@@ -2128,15 +2111,7 @@
             position: relative;
             overflow: hidden;
         }
-        /* .shop-hero-div .content-container .dark-bg{
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: black;
-            opacity: .3;
-        } */
+
         .shop-hero-div .content-container .content{
             z-index: 2;
         }
@@ -2922,6 +2897,17 @@
                 margin-top: 20px;
             }
 
+/* website policy */
+            .policies-section .policies-section-container{
+                display:flex;
+                flex-wrap: wrap;
+                height: 100%;
+                background-color: white;
+            }
+                .policies-section .policies-section-container .content-container{
+                    flex: 1;
+                    padding: 20px;
+                }
 
 /* footer section */
         footer{
